--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   margin: 0;
   width: 100%;
-  padding-bottom: 40px;
+  padding-bottom: 60px;
   /* height: 800px; */
 }
 .carousel{
@@ -30,16 +30,16 @@ body {
   /* text-decoration-thickness: 3px;
   text-decoration-line: underline; */
 }
-
+.services{
+  margin-top: 80px;
+}
 .myBg{
-  /* background-color:#17034d; */
   height:700px;
 
 
 }
 .myBg2{
   background-color:#e4f0f1;
-  /* height:1000px; */
 }
 .myBg4{
   background-color:#e4f0f1;
